--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Modak&family=Patua+One&display=swap" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet" />
+</head>
+<body>
+  <script>
+  </script>
+  <div class="container-side"></div>
+  <div class="container-middle">
+    <img class="leaf" src="img/mint_leaves_logo_white.svg"></img><span class="logo">mint.</span>
+    <br/><div class="centered"><span class="button">Push me</span></div>
+  </div>
+  <div class="container-side"></div>
+</body>
+</html>
