VAR: Testing flex and grid flows

--- a/index.html
+++ b/index.html
@@ -5,17 +5,38 @@
   <title></title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Modak&family=Patua+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Modak&family=Orelega+One&family=Patua+One&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
   <script>
   </script>
-  <div class="container-side"></div>
-  <div class="container-middle">
-    <img class="leaf" src="img/mint_leaves_logo_white.svg"></img><span class="logo">mint.</span>
-    <br/><div class="centered"><span class="button">Push me</span></div>
-  </div>
-  <div class="container-side"></div>
+  <main class="grid-3-cols">
+    <div class="container-left"></div>
+    <div class="container-middle">
+      <div class="icon-and-logo">
+        <img class="leaf" src="img/mint_leaves_logo_white.svg"></img><span class="logo">mint.</span>
+      </div>
+      <div class="card-flex">
+        <div class="card">
+          <h2 class="card-header">Rubrik1</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et tortor scelerisque, blandit ligula et, iaculis magna. Cras vulputate quam eu commodo varius. Donec egestas eu lorem a venenatis. In eget vestibulum eros. Donec ornare nibh sed quam venenatis ullamcorper. Aenean sed orci non lectus finibus pellentesque ut ut augue. Phasellus accumsan mauris nec ex eleifend egestas. Proin feugiat, nulla at ultricies egestas, diam metus volutpat elit, at egestas diam leo mollis libero. Aliquam a felis semper, congue arcu eget, tincidunt nisl.</p>
+        </div>
+        <div class="card">
+          <h2 class="card-header">Rubrik2</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et tortor scelerisque, blandit ligula et, iaculis magna. Cras vulputate quam eu commodo varius. Donec egestas eu lorem a venenatis. In eget vestibulum eros. Donec ornare nibh sed quam venenatis ullamcorper. Aenean sed orci non lectus finibus pellentesque ut ut augue. Phasellus accumsan mauris nec ex eleifend egestas. Proin feugiat, nulla at ultricies egestas, diam metus volutpat elit, at egestas diam leo mollis libero. Aliquam a felis semper, congue arcu eget, tincidunt nisl.</p>
+        </div>
+        <div class="card">
+          <h2 class="card-header">Rubrik3</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et tortor scelerisque, blandit ligula et, iaculis magna. Cras vulputate quam eu commodo varius. Donec egestas eu lorem a venenatis. In eget vestibulum eros. Donec ornare nibh sed quam venenatis ullamcorper. Aenean sed orci non lectus finibus pellentesque ut ut augue. Phasellus accumsan mauris nec ex eleifend egestas. Proin feugiat, nulla at ultricies egestas, diam metus volutpat elit, at egestas diam leo mollis libero. Aliquam a felis semper, congue arcu eget, tincidunt nisl.</p>
+        </div>
+      </div>
+      <div class="flex-wrapper">
+        <span class="button">Push me</span>
+      </div>
+    </div>
+    <div class="container-right"></div>
+  </main>
+  <footer>asdfasdfasdfasdf</footer>
 </body>
 </html>
