VAR: Fixed scrolling

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     </div>
     <div class="container-right"></div>
   </main>
-  <footer>asdfasdfasdfasdf</footer>
+  <footer></footer>
 </body>
 </html>
