VAR: Added images and style fixes

--- a/index.html
+++ b/index.html
@@ -14,26 +14,37 @@
   <main class="grid-3-cols">
     <div class="container-left"></div>
     <div class="container-middle">
-      <div class="icon-and-logo">
+      <header class="icon-and-logo">
         <img class="leaf" src="img/mint_leaves_logo_white.svg"></img><span class="logo">mint.</span>
-      </div>
+      </header>
+      <div class="slogan">Vi är Mint!<br/>Den nya tidens konsultbolag</div>
       <div class="card-flex">
         <div class="card">
-          <h2 class="card-header">Rubrik1</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et tortor scelerisque, blandit ligula et, iaculis magna. Cras vulputate quam eu commodo varius. Donec egestas eu lorem a venenatis. In eget vestibulum eros. Donec ornare nibh sed quam venenatis ullamcorper. Aenean sed orci non lectus finibus pellentesque ut ut augue. Phasellus accumsan mauris nec ex eleifend egestas. Proin feugiat, nulla at ultricies egestas, diam metus volutpat elit, at egestas diam leo mollis libero. Aliquam a felis semper, congue arcu eget, tincidunt nisl.</p>
+          <img class="card-image" src="img/graphs3.jpeg"><img>
+          <h2 class="card-header">Vad gör vi?</h2>
+          <p>Mint rådger och hjälper företag att bli kundfokuserade med hjälp av expertkonsulter som stöttar digitalisering inifrån.</p>
         </div>
         <div class="card">
-          <h2 class="card-header">Rubrik2</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et tortor scelerisque, blandit ligula et, iaculis magna. Cras vulputate quam eu commodo varius. Donec egestas eu lorem a venenatis. In eget vestibulum eros. Donec ornare nibh sed quam venenatis ullamcorper. Aenean sed orci non lectus finibus pellentesque ut ut augue. Phasellus accumsan mauris nec ex eleifend egestas. Proin feugiat, nulla at ultricies egestas, diam metus volutpat elit, at egestas diam leo mollis libero. Aliquam a felis semper, congue arcu eget, tincidunt nisl.</p>
+          <img class="card-image" src="img/impressionism2.jpeg"><img>
+          <h2 class="card-header">Hur jobbar vi?</h2>
+          <p>Vi möter kunders digitaliseringsbehov med konsulttjänster som snabbt skapar värde.</p>
         </div>
         <div class="card">
-          <h2 class="card-header">Rubrik3</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et tortor scelerisque, blandit ligula et, iaculis magna. Cras vulputate quam eu commodo varius. Donec egestas eu lorem a venenatis. In eget vestibulum eros. Donec ornare nibh sed quam venenatis ullamcorper. Aenean sed orci non lectus finibus pellentesque ut ut augue. Phasellus accumsan mauris nec ex eleifend egestas. Proin feugiat, nulla at ultricies egestas, diam metus volutpat elit, at egestas diam leo mollis libero. Aliquam a felis semper, congue arcu eget, tincidunt nisl.</p>
+          <img class="card-image" src="img/plant in blueprint.jpeg"><img>
+          <h2 class="card-header">Vår vision</h2>
+          <p>Vi möter organisationers digitaliseringsbehov med konsulttjänster som snabbt skapar värde för våra kunder. Vi vill hjälpa våra kunder att bli lärande organisationer så att de kan anpassa sig till nya affärskrav. För det krävs de främsta experterna inom teknik och digital transformation.</p>
+        </div>
+        <div class="card">
+          <img class="card-image" src="img/mint_plant_centered_offset.jpeg"><img>
+          <h2 class="card-header">Vår kultur</h2>
+          <p>Med våra kunders bästa för ögonen vill vi utforska en “teal organisation” där team och medarbetare tar eget ansvar för hur värde skapas, hur vi lär oss snabbare än andra och hur vi månar om varandras personliga och professionella utveckling. Vi strävar efter att leva som vi lär och det genomsyrar hur vi leder, verkar, kommunicerar och prioriterar.</p>
         </div>
       </div>
       <div class="flex-wrapper">
-        <span class="button">Push me</span>
+        <span class="button">Se vilka vi är</span>
       </div>
+      <footer>
+      </footer>
     </div>
     <div class="container-right"></div>
   </main>
