--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 <body>
   <script>
   </script>
+  <header class="icon-and-logo">
+    <div class="header-container">
+      <div class="container-top-left"></div>
+      <div class="logo-container">
+        <img class="leaf" src="img/mint_leaves_logo_white.svg"></img>
+        <!-- <span class="logo">mint</span> -->
+        <img class="logo-img" src="img/logo_pink_accent.png"><img>
+        <div class="slogan">Den nya tidens konsultbolag</div>
+      </div>
+      <div class="container-top-right"></div>
+    </div>
+  </header>
   <main class="grid-3-cols">
     <div class="container-left"></div>
     <div class="container-middle">
-      <header class="icon-and-logo">
-        <img class="leaf" src="img/mint_leaves_logo_white.svg"></img><span class="logo">mint.</span>
-      </header>
-      <div class="slogan">Vi är Mint!<br/>Den nya tidens konsultbolag</div>
       <div class="card-flex">
         <div class="card">
           <img class="card-image" src="img/graphs3.jpeg"><img>
@@ -43,11 +51,17 @@
       <div class="flex-wrapper">
         <span class="button">Se vilka vi är</span>
       </div>
-      <footer>
-      </footer>
+
     </div>
     <div class="container-right"></div>
   </main>
-  <footer></footer>
+  <footer>
+    <hr style="width: 50%; margin: auto;"/>
+    <div class="contact">
+      <div style="text-decoration: underline; margin-bottom: 0.4em; font-size: 1.4em;">Kontaktinformation</div>
+      <p>Email: &nbsp; <a class="email" href="mailto:hej@mint.se">hej@mint.se</a></p>
+      <p>Tel: &nbsp; 072 - 44 76 700</p>
+    </div>
+  </footer>
 </body>
 </html>
