VAR: Made telephone link callable

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="contact">
       <div style="text-decoration: underline; margin-bottom: 0.4em; font-size: 1.4em;">Kontaktinformation</div>
       <p>Email: &nbsp; <a class="email" href="mailto:hej@mint.se">hej@mint.se</a></p>
-      <p>Tel: &nbsp; 072 - 44 76 700</p>
+      <p>Tel: &nbsp; <a class="tel" href="tel:+46724476700" >072 - 44 76 700</a></p>
     </div>
   </footer>
 </body>
