--- a/index.html
+++ b/index.html
@@ -5,58 +5,27 @@
   <title></title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Modak&family=Orelega+One&family=Patua+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@700&family=Modak&family=Orelega+One&family=Patua+One&display=swap" rel="stylesheet">
+  <!--<link href="font/Gabarito-Regular.ttf" />-->
   <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
   <script>
   </script>
   <header class="icon-and-logo">
-    <div class="header-container">
-      <div class="container-top-left"></div>
-      <div class="logo-container">
-        <img class="leaf" src="img/mint_leaves_logo_white.svg"></img>
-        <!-- <span class="logo">mint</span> -->
-        <img class="logo-img" src="img/logo_pink_accent.png"><img>
-        <div class="slogan">Den nya tidens konsultbolag</div>
-      </div>
-      <div class="container-top-right"></div>
+    <div class="logo-container">
+      <img class="logo-img" src="img/mint_logo_v1_light.png"><img> 
+      <span class="slogan">Den nya tidens konsultbolag</span>
     </div>
   </header>
-  <main class="grid-3-cols">
+  <main>
     <div class="container-left"></div>
     <div class="container-middle">
-      <div class="card-flex">
-        <div class="card">
-          <img class="card-image" src="img/graphs3.jpeg"><img>
-          <h2 class="card-header">Vad gör vi?</h2>
-          <p>Mint rådger och hjälper företag att bli kundfokuserade med hjälp av expertkonsulter som stöttar digitalisering inifrån.</p>
-        </div>
-        <div class="card">
-          <img class="card-image" src="img/impressionism2.jpeg"><img>
-          <h2 class="card-header">Hur jobbar vi?</h2>
-          <p>Vi möter kunders digitaliseringsbehov med konsulttjänster som snabbt skapar värde.</p>
-        </div>
-        <div class="card">
-          <img class="card-image" src="img/plant in blueprint.jpeg"><img>
-          <h2 class="card-header">Vår vision</h2>
-          <p>Vi möter organisationers digitaliseringsbehov med konsulttjänster som snabbt skapar värde för våra kunder. Vi vill hjälpa våra kunder att bli lärande organisationer så att de kan anpassa sig till nya affärskrav. För det krävs de främsta experterna inom teknik och digital transformation.</p>
-        </div>
-        <div class="card">
-          <img class="card-image" src="img/mint_plant_centered_offset.jpeg"><img>
-          <h2 class="card-header">Vår kultur</h2>
-          <p>Med våra kunders bästa för ögonen vill vi utforska en “teal organisation” där team och medarbetare tar eget ansvar för hur värde skapas, hur vi lär oss snabbare än andra och hur vi månar om varandras personliga och professionella utveckling. Vi strävar efter att leva som vi lär och det genomsyrar hur vi leder, verkar, kommunicerar och prioriterar.</p>
-        </div>
-      </div>
-      <div class="flex-wrapper">
-        <span class="button">Se vilka vi är</span>
-      </div>
 
     </div>
     <div class="container-right"></div>
   </main>
   <footer>
-    <hr style="width: 50%; margin: auto;"/>
     <div class="contact">
       <div style="text-decoration: underline; margin-bottom: 0.4em; font-size: 1.4em;">Kontaktinformation</div>
       <p>Email: &nbsp; <a class="email" href="mailto:hej@mint.se">hej@mint.se</a></p>
